render-wasm/src/render/svg/snapshots/render_wasm__render__svg__tests__exports_rect_with_dotted_inner_stroke.snap
---
source: src/render/svg/tests.rs
expression: svg
---
<?xml version="1.0" encoding="utf-8" ?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100" height="80" viewBox="0 0 100 80">
	<path fill="blue" transform="translate(-10 -10)" d="M110 10L10 10L10 90L110 90L110 10ZM16.614376 17.500002C16.692715 17.430916 16.769951 17.36062 16.846085 17.289116C16.922218 17.217609 16.997213 17.144928 17.07107 17.07107C17.144928 16.997213 17.217609 16.922218 17.289116 16.846085C17.36062 16.769951 17.430916 16.692715 17.500002 16.614376C17.969212 17.14641 18.489145 17.623119 19.059803 18.044504C19.630463 18.465889 20.239069 18.822514 20.885624 19.114378C21.532177 19.406242 22.2022 19.626814 22.895693 19.776089C23.589188 19.925364 24.290623 20 25 20C25.709379 20 26.410814 19.925364 27.104309 19.776089C27.797804 19.626814 28.467827 19.406244 29.11438 19.11438C29.760933 18.822515 30.369539 18.465889 30.940201 18.044504C31.510859 17.623119 32.030792 17.14641 32.5 16.614376C32.969208 17.14641 33.489143 17.623119 34.059803 18.044504C34.630463 18.465889 35.239071 18.822514 35.885624 19.114378C36.532177 19.406242 37.202202 19.626814 37.895695 19.776089C38.589188 19.925364 39.290623 20 40 20C40.709377 20 41.410812 19.925364 42.104309 19.776089C42.797802 19.626814 43.467823 19.406244 44.11438 19.11438C44.760937 18.822515 45.369541 18.465889 45.940201 18.044504C46.51086 17.623119 47.030792 17.14641 47.5 16.614376C47.969208 17.14641 48.48914 17.623119 49.059799 18.044504C49.630463 18.465889 50.239071 18.822514 50.885624 19.114378C51.532177 19.406242 52.202202 19.626814 52.895695 19.776089C53.589188 19.925364 54.290623 20 55 20C55.709377 20 56.410812 19.925364 57.104305 19.776089C57.797798 19.626814 58.467823 19.406244 59.11438 19.11438C59.760937 18.822515 60.369541 18.465889 60.940201 18.044504C61.51086 17.623119 62.030792 17.14641 62.5 16.614376C62.969212 17.14641 63.489143 17.623119 64.059799 18.044504C64.630455 18.465889 65.239067 18.822514 65.88562 19.114378C66.532173 19.406242 67.202202 19.626814 67.895699 19.776089C68.589188 19.925364 69.290627 20 70 20C70.709381 20 71.41082 19.925364 72.104309 19.776089C72.797798 19.626814 73.467827 19.406244 74.11438 19.11438C74.760933 18.822515 75.369545 18.465889 75.940201 18.044504C76.510857 17.623119 77.030792 17.14641 77.5 16.614376C77.969208 17.14641 78.489143 17.623119 79.059807 18.044504C79.630463 18.465889 80.239075 18.822514 80.885628 19.114378C81.532181 19.406242 82.202202 19.626814 82.895699 19.776089C83.589188 19.925364 84.290627 20 85 20C85.709381 20 86.41082 19.925364 87.104317 19.776089C87.797813 19.626814 88.467834 19.406244 89.114388 19.11438C89.760941 18.822515 90.369545 18.465889 90.940201 18.044504C91.510857 17.623119 92.030792 17.14641 92.5 16.614376C92.969208 17.14641 93.489143 17.623119 94.059807 18.044504C94.630463 18.465889 95.239067 18.822514 95.88562 19.114378C96.532173 19.406242 97.202202 19.626814 97.895699 19.776089C98.589195 19.925364 99.290627 20 100 20C100.10797 20 100.21591 19.998253 100.32383 19.994757C100.43175 19.991261 100.53957 19.986017 100.64731 19.979027C100.75506 19.972038 100.86266 19.963306 100.97012 19.952833C101.07758 19.94236 101.18484 19.930147 101.2919 19.916197C101.42886 20.158796 101.57571 20.395258 101.73242 20.625584C101.88914 20.855909 102.0552 21.079296 102.23059 21.295742C102.40598 21.51219 102.5901 21.720945 102.78294 21.922005C102.97578 22.123064 103.17667 22.315729 103.38562 22.499998C102.85358 22.969208 102.37688 23.489141 101.9555 24.059799C101.53411 24.630461 101.17748 25.239067 100.88562 25.88562C100.59376 26.532175 100.37318 27.2022 100.22391 27.895695C100.07464 28.589188 100 29.290623 100 30C100 30.709379 100.07464 31.410814 100.22392 32.104309C100.37318 32.797802 100.59376 33.467827 100.88562 34.11438C101.17748 34.760937 101.53411 35.369541 101.95549 35.940201C102.37688 36.51086 102.85358 37.030792 103.38562 37.5C102.85358 37.969212 102.37688 38.489143 101.9555 39.059803C101.53411 39.630463 101.17748 40.239067 100.88562 40.88562C100.59376 41.532177 100.37318 42.202198 100.22391 42.895691C100.07464 43.589188 100 44.290623 100 45C100 45.709377 100.07464 46.410812 100.22392 47.104309C100.37318 47.797802 100.59376 48.467823 100.88562 49.11438C101.17748 49.760937 101.53411 50.369541 101.95549 50.940201C102.37688 51.51086 102.85358 52.030792 103.38562 52.5C102.85358 52.969208 102.37688 53.48914 101.9555 54.059799C101.53411 54.630459 101.17748 55.239067 100.88562 55.88562C100.59376 56.532177 100.37318 57.202198 100.22391 57.895691C100.07464 58.589188 100 59.290623 100 60C100 60.709377 100.07464 61.410816 100.22392 62.104309C100.37318 62.797802 100.59376 63.467827 100.88562 64.11438C101.17748 64.760933 101.53411 65.369537 101.95549 65.940193C102.37688 66.510857 102.85358 67.030792 103.38562 67.5C102.85358 67.969208 102.37688 68.489143 101.9555 69.059799C101.53411 69.630463 101.17748 70.239067 100.88562 70.88562C100.59376 71.532173 100.37318 72.202202 100.22391 72.895691C100.07464 73.589188 100 74.290627 100 75C100 75.709381 100.07464 76.41082 100.22392 77.104309C100.37318 77.797798 100.59376 78.467827 100.88562 79.11438C101.17748 79.760933 101.53411 80.369537 101.95549 80.940201C102.37688 81.510857 102.85358 82.030792 103.38562 82.5C103.30729 82.569092 103.23006 82.639389 103.15393 82.710892C103.0778 82.782402 103.0028 82.855087 102.92894 82.928932C102.85509 83.002792 102.78241 83.077797 102.71091 83.153931C102.6394 83.230064 102.56909 83.307289 102.5 83.38562C102.03079 82.853584 101.51086 82.376877 100.9402 81.955498C100.36954 81.534119 99.760933 81.17749 99.11438 80.885628C98.467827 80.593765 97.797798 80.373192 97.104309 80.223915C96.41082 80.074638 95.709381 80 95 80C94.290627 80 93.589188 80.074638 92.895699 80.223915C92.202202 80.373192 91.532173 80.593765 90.88562 80.885628C90.239067 81.17749 89.630463 81.534119 89.059799 81.955498C88.489143 82.376877 87.969208 82.853584 87.5 83.38562C87.030792 82.853584 86.510857 82.376877 85.940201 81.955498C85.369545 81.534119 84.760933 81.17749 84.11438 80.885628C83.467827 80.593765 82.797798 80.373192 82.104309 80.223915C81.41082 80.074638 80.709381 80 80 80C79.290627 80 78.589195 80.074638 77.895699 80.223915C77.202209 80.373192 76.532181 80.593765 75.885628 80.885628C75.239075 81.17749 74.63047 81.534119 74.059807 81.955498C73.489143 82.376877 72.969208 82.853584 72.5 83.38562C72.030792 82.853584 71.510857 82.376877 70.940193 81.955498C70.369537 81.534119 69.760933 81.17749 69.11438 80.885628C68.467827 80.593765 67.797798 80.373192 67.104309 80.223915C66.41082 80.074638 65.709381 80 65 80C64.290627 80 63.589188 80.074638 62.895695 80.223907C62.202202 80.373184 61.532177 80.593758 60.885624 80.88562C60.239071 81.17749 59.630463 81.534119 59.059803 81.955498C58.489143 82.376884 57.969208 82.853592 57.5 83.385628C57.030788 82.853592 56.510857 82.376884 55.940197 81.955505C55.369537 81.534119 54.760929 81.17749 54.114376 80.885628C53.467823 80.593765 52.797798 80.373192 52.104305 80.223915C51.410812 80.074638 50.709373 80 49.999996 80C49.290619 80 48.589184 80.074638 47.895691 80.223915C47.202198 80.373192 46.532177 80.593765 45.885624 80.885628C45.239071 81.17749 44.630466 81.534119 44.059807 81.955498C43.489147 82.376877 42.969212 82.853584 42.5 83.38562C42.030792 82.853584 41.51086 82.376877 40.940201 81.955498C40.369541 81.534119 39.760937 81.17749 39.11438 80.885628C38.467823 80.593765 37.797802 80.373192 37.104309 80.223915C36.410812 80.074638 35.709377 80 35 80C34.290623 80 33.589188 80.074638 32.895695 80.223915C32.202202 80.373192 31.532177 80.593765 30.885624 80.885628C30.239069 81.17749 29.630463 81.534119 29.059803 81.955498C28.489145 82.376877 27.969212 82.853584 27.500002 83.38562C27.030792 82.853584 26.510859 82.376877 25.940199 81.955498C25.369541 81.534119 24.760935 81.17749 24.114382 80.885628C23.467827 80.593765 22.797804 80.373192 22.104309 80.223915C21.410814 80.074638 20.709379 80 20 80C19.892031 80.000008 19.78409 80.001755 19.676178 80.005249C19.568266 80.008751 19.460436 80.013992 19.352692 80.020973C19.244949 80.027969 19.137348 80.036705 19.029888 80.04718C18.922428 80.057648 18.815166 80.069855 18.708101 80.083801C18.57114 79.841202 18.424297 79.604736 18.267574 79.374413C18.110851 79.144089 17.944794 78.920708 17.7694 78.704254C17.594006 78.487808 17.409889 78.279053 17.217049 78.077995C17.024208 77.876938 16.823317 77.684273 16.614376 77.5C17.14641 77.030792 17.623119 76.510857 18.044504 75.940201C18.465889 75.369545 18.822514 74.760933 19.114378 74.11438C19.406242 73.467827 19.626814 72.797798 19.776089 72.104309C19.925364 71.41082 20 70.709381 20 70C20 69.290627 19.925364 68.589188 19.776089 67.895691C19.626814 67.202202 19.406244 66.532181 19.11438 65.885628C18.822515 65.239075 18.465889 64.630463 18.044504 64.059807C17.623119 63.489147 17.14641 62.969212 16.614376 62.5C17.14641 62.030792 17.623119 61.51086 18.044504 60.940201C18.465889 60.369541 18.822514 59.760937 19.114378 59.11438C19.406242 58.467823 19.626814 57.797798 19.776089 57.104305C19.925364 56.410812 20 55.709377 20 55C20 54.290623 19.925364 53.589188 19.776089 52.895691C19.626814 52.202198 19.406244 51.532177 19.11438 50.88562C18.822515 50.239067 18.465889 49.630463 18.044504 49.059803C17.623119 48.489143 17.14641 47.969208 16.614376 47.5C17.14641 47.030792 17.623119 46.51086 18.044504 45.940201C18.465889 45.369541 18.822514 44.760937 19.114378 44.11438C19.406242 43.467823 19.626814 42.797802 19.776089 42.104309C19.925364 41.410812 20 40.709377 20 40C20 39.290623 19.925364 38.589188 19.776089 37.895691C19.626814 37.202198 19.406244 36.532177 19.11438 35.88562C18.822515 35.239067 18.465889 34.630463 18.044504 34.059803C17.623119 33.489143 17.14641 32.969208 16.614376 32.5C17.14641 32.030792 17.623119 31.510859 18.044504 30.940199C18.465889 30.369539 18.822514 29.760933 19.114378 29.11438C19.406242 28.467827 19.626814 27.797802 19.776089 27.104307C19.925364 26.410814 20 25.709379 20 25C20 24.290623 19.925364 23.589188 19.776089 22.895695C19.626814 22.2022 19.406244 21.532177 19.11438 20.885622C18.822515 20.239067 18.465889 19.630461 18.044504 19.059803C17.623119 18.489145 17.14641 17.969212 16.614376 17.500002Z" fill-rule="evenodd"/>
</svg>
