render-wasm/src/render/svg/snapshots/render_wasm__render__svg__tests__exports_rect_with_dotted_outer_stroke.snap
---
source: src/render/svg/tests.rs
expression: svg
---
<?xml version="1.0" encoding="utf-8" ?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="120" height="100" viewBox="0 0 120 100">
	<path fill="red" transform="translate(-10 -10)" d="M50 10C49.290623 10 48.589188 10.074637 47.895691 10.223912C47.202198 10.373187 46.532177 10.593758 45.88562 10.885623C45.239067 11.177487 44.630463 11.534112 44.059803 11.955497C43.489143 12.376882 42.969208 12.853591 42.5 13.385624C42.030792 12.853591 41.51086 12.376882 40.940201 11.955497C40.369541 11.534112 39.760937 11.177487 39.11438 10.885623C38.467827 10.593758 37.797802 10.373187 37.104309 10.223912C36.410816 10.074637 35.709377 10 35 10C34.290623 10 33.589188 10.074637 32.895695 10.223912C32.202202 10.373187 31.532177 10.593758 30.885624 10.885623C30.239069 11.177487 29.630463 11.534112 29.059803 11.955497C28.489145 12.376882 27.969212 12.853591 27.500002 13.385624C27.030792 12.853591 26.510859 12.376882 25.940199 11.955497C25.369541 11.534112 24.760935 11.177487 24.114382 10.885623C23.467827 10.593758 22.797804 10.373187 22.104309 10.223912C21.410814 10.074637 20.709379 10 20 10C18.673918 10 17.398306 10.253735 16.173164 10.761204C14.948024 11.268674 13.866613 11.99125 12.928932 12.928932C11.99125 13.866613 11.268674 14.948024 10.761204 16.173164C10.253735 17.398306 10 18.673918 10 20C10 20.709379 10.074637 21.410814 10.223912 22.104309C10.373187 22.797804 10.593758 23.467827 10.885623 24.11438C11.177487 24.760933 11.534112 25.369539 11.955497 25.940197C12.376882 26.510855 12.853591 27.030788 13.385624 27.499998C12.853591 27.969208 12.376882 28.489141 11.955497 29.059803C11.534112 29.630461 11.177487 30.239067 10.885623 30.885622C10.593758 31.532177 10.373187 32.202202 10.223912 32.895695C10.074637 33.589188 10 34.290623 10 35C10 35.709377 10.074637 36.410816 10.223912 37.104309C10.373187 37.797802 10.593758 38.467827 10.885623 39.11438C11.177487 39.760937 11.534112 40.369541 11.955497 40.940201C12.376882 41.51086 12.853591 42.030792 13.385624 42.5C12.853591 42.969208 12.376882 43.48914 11.955497 44.059799C11.534112 44.630459 11.177487 45.239067 10.885623 45.88562C10.593758 46.532177 10.373187 47.202198 10.223912 47.895691C10.074637 48.589188 10 49.290623 10 50C10 50.709377 10.074637 51.410816 10.223912 52.104309C10.373187 52.797806 10.593758 53.467831 10.885623 54.114384C11.177487 54.760937 11.534112 55.369541 11.955497 55.940201C12.376882 56.51086 12.853591 57.030792 13.385624 57.5C12.853591 57.969212 12.376882 58.489147 11.955497 59.059807C11.534112 59.630466 11.177487 60.239071 10.885623 60.88562C10.593758 61.532177 10.373187 62.202198 10.223912 62.895691C10.074637 63.589188 10 64.290627 10 65C10 65.709381 10.074637 66.41082 10.223912 67.104309C10.373187 67.797798 10.593758 68.467827 10.885623 69.11438C11.177487 69.760933 11.534112 70.369537 11.955497 70.940193C12.376882 71.510857 12.853591 72.030792 13.385624 72.5C12.853591 72.969208 12.376882 73.489143 11.955497 74.059807C11.534112 74.63047 11.177487 75.239075 10.885623 75.885628C10.593758 76.532181 10.373187 77.202209 10.223912 77.895699C10.074637 78.589195 10 79.290627 10 80C10 80.709381 10.074637 81.41082 10.223912 82.104309C10.373187 82.797798 10.593758 83.467827 10.885623 84.11438C11.177487 84.760933 11.534112 85.369545 11.955497 85.940201C12.376882 86.510857 12.853591 87.030792 13.385624 87.5C12.853591 87.969208 12.376882 88.489143 11.955497 89.059807C11.534112 89.630463 11.177487 90.239067 10.885623 90.88562C10.593758 91.532173 10.373187 92.202202 10.223912 92.895699C10.074637 93.589188 10 94.290627 10 95C10 96.326073 10.253735 97.601685 10.761204 98.826828C11.268674 100.05196 11.99125 101.13338 12.928932 102.07106C13.866613 103.00874 14.948024 103.73132 16.173164 104.23878C17.398306 104.74625 18.673918 104.99999 20 105C20.107971 105 20.215914 104.99825 20.323826 104.99476C20.431738 104.99126 20.539566 104.98602 20.647308 104.97903C20.755053 104.97205 20.862656 104.96332 20.970116 104.95284C21.077576 104.94237 21.184837 104.93015 21.291899 104.9162C21.727407 105.68761 22.256086 106.38879 22.877937 107.0197C23.49979 107.65062 24.193235 108.18939 24.958271 108.63602C25.723307 109.08266 26.533386 109.42164 27.388512 109.65298C28.243637 109.88433 29.114134 110 30 110C30.709379 110 31.410814 109.92536 32.104309 109.77609C32.797802 109.62682 33.467827 109.40624 34.11438 109.11438C34.760937 108.82252 35.369541 108.46589 35.940201 108.0445C36.51086 107.62312 37.030792 107.14642 37.5 106.61438C37.969212 107.14642 38.489143 107.62312 39.059803 108.04451C39.630463 108.46589 40.239067 108.82252 40.88562 109.11438C41.532177 109.40624 42.202198 109.62682 42.895691 109.77608C43.589188 109.92536 44.290623 110 45 110C45.709377 110 46.410812 109.92536 47.104309 109.77609C47.797802 109.62682 48.467823 109.40624 49.11438 109.11438C49.760933 108.82252 50.369537 108.46589 50.940197 108.0445C51.510857 107.62312 52.030788 107.14642 52.499996 106.61438C52.969208 107.14642 53.489143 107.62312 54.059803 108.04451C54.630463 108.4659 55.239071 108.82253 55.885624 109.11439C56.532177 109.40625 57.202198 109.62682 57.895691 109.77608C58.589184 109.92536 59.290619 110 59.999996 110C60.709373 110 61.410812 109.92536 62.104309 109.77609C62.797802 109.62682 63.467827 109.40624 64.11438 109.11438C64.760933 108.82252 65.369537 108.46589 65.940193 108.0445C66.510857 107.62312 67.030792 107.14641 67.5 106.61437C67.969208 107.14641 68.489143 107.62312 69.059799 108.0445C69.630455 108.46589 70.239067 108.82252 70.88562 109.11438C71.532173 109.40624 72.202202 109.62682 72.895691 109.77608C73.58918 109.92536 74.290619 110 75 110C75.709381 110 76.41082 109.92536 77.104309 109.77609C77.797798 109.62682 78.467827 109.40624 79.11438 109.11438C79.760933 108.82252 80.369537 108.46589 80.940201 108.0445C81.510857 107.62312 82.030792 107.14642 82.5 106.61438C82.969208 107.14642 83.489143 107.62312 84.059807 108.04451C84.630463 108.46589 85.239075 108.82252 85.885628 109.11438C86.532181 109.40624 87.202202 109.62682 87.895699 109.77608C88.589188 109.92536 89.290627 110 90 110C90.709373 110 91.410812 109.92536 92.104309 109.77609C92.797798 109.62682 93.467827 109.40624 94.11438 109.11438C94.760933 108.82252 95.369537 108.46589 95.940201 108.0445C96.510857 107.62312 97.030792 107.14642 97.5 106.61438C97.969215 107.14642 98.489151 107.62312 99.059807 108.04451C99.630463 108.46589 100.23907 108.82252 100.88562 109.11438C101.53217 109.40624 102.2022 109.62682 102.89569 109.77608C103.58919 109.92536 104.29063 110 105 110C105.70938 110 106.41082 109.92536 107.10431 109.77609C107.7978 109.62682 108.46782 109.40624 109.11437 109.11438C109.76093 108.82252 110.36954 108.46589 110.94019 108.0445C111.51086 107.62312 112.03079 107.14642 112.5 106.61438C112.96921 107.14642 113.48914 107.62312 114.05981 108.04451C114.63047 108.46589 115.23907 108.82252 115.88563 109.11438C116.53218 109.40624 117.20221 109.62682 117.89571 109.77608C118.5892 109.92536 119.29063 110 120 110C121.32607 109.99999 122.60168 109.74625 123.82681 109.23878C125.05195 108.73131 126.13337 108.00874 127.07106 107.07106C128.00873 106.13338 128.73131 105.05196 129.23877 103.82682C129.74625 102.60168 129.99998 101.32607 130 100C130 99.290627 129.92537 98.589195 129.77609 97.895699C129.62682 97.202209 129.40625 96.532181 129.11438 95.885628C128.82253 95.239075 128.4659 94.63047 128.04451 94.059799C127.62312 93.489143 127.14642 92.969208 126.61438 92.5C127.14642 92.030792 127.62312 91.510857 128.04451 90.940201C128.4659 90.369545 128.82253 89.760933 129.11438 89.11438C129.40625 88.467827 129.62682 87.797806 129.77609 87.104309C129.92537 86.41082 130 85.709381 130 85C130 84.290627 129.92537 83.589188 129.77609 82.895699C129.62682 82.202202 129.40625 81.532181 129.11438 80.885628C128.82253 80.239075 128.4659 79.630463 128.04451 79.059799C127.62312 78.489143 127.14642 77.969208 126.61438 77.5C127.14642 77.030792 127.62312 76.510857 128.04451 75.940201C128.4659 75.369545 128.82253 74.760933 129.11438 74.11438C129.40625 73.467827 129.62682 72.797798 129.77609 72.104309C129.92537 71.41082 130 70.709381 130 70C130 69.290627 129.92537 68.589188 129.77609 67.895691C129.62682 67.202202 129.40625 66.532181 129.11438 65.885628C128.82253 65.239075 128.4659 64.630463 128.04451 64.059807C127.62312 63.489147 127.14642 62.969212 126.61438 62.5C127.14642 62.030792 127.62312 61.51086 128.04451 60.940201C128.4659 60.369541 128.82253 59.760937 129.11438 59.11438C129.40625 58.467823 129.62682 57.797798 129.77609 57.104305C129.92537 56.410812 130 55.709377 130 55C130 54.290623 129.92537 53.589188 129.77609 52.895691C129.62682 52.202198 129.40625 51.532177 129.11438 50.88562C128.82253 50.239067 128.4659 49.630463 128.04451 49.059803C127.62312 48.489143 127.14642 47.969208 126.61438 47.5C127.14642 47.030792 127.62312 46.51086 128.04451 45.940201C128.4659 45.369541 128.82253 44.760937 129.11438 44.11438C129.40625 43.467823 129.62682 42.797802 129.77609 42.104309C129.92537 41.410812 130 40.709377 130 40C130 39.290623 129.92537 38.589188 129.77609 37.895691C129.62682 37.202198 129.40625 36.532177 129.11438 35.88562C128.82253 35.239067 128.4659 34.630463 128.04451 34.059803C127.62312 33.489143 127.14642 32.969208 126.61438 32.5C127.14642 32.030792 127.62312 31.510859 128.04451 30.940199C128.4659 30.369539 128.82253 29.760933 129.11438 29.11438C129.40625 28.467827 129.62682 27.797802 129.77609 27.104307C129.92537 26.410814 130 25.709379 130 25C129.99998 23.673916 129.74625 22.398304 129.23877 21.173162C128.73131 19.948023 128.00873 18.866611 127.07106 17.92893C126.13337 16.991249 125.05195 16.268673 123.82681 15.761204C122.60168 15.253735 121.32607 15 120 15C119.89204 15.000001 119.7841 15.00175 119.67619 15.005246C119.56828 15.008742 119.46044 15.013985 119.35269 15.020973C119.24496 15.027963 119.13735 15.036695 119.02989 15.04717C118.92243 15.057644 118.81517 15.069856 118.7081 15.083804C118.27259 14.312383 117.7439 13.611213 117.12206 12.980294C116.50021 12.349375 115.80676 11.8106 115.04173 11.363971C114.27669 10.917341 113.46661 10.578356 112.61148 10.347013C111.75636 10.115671 110.88586 10 110 10C109.29063 10 108.58919 10.074637 107.8957 10.223912C107.2022 10.373187 106.53218 10.593758 105.88563 10.885623C105.23907 11.177487 104.63046 11.534112 104.05981 11.955497C103.48914 12.376882 102.96921 12.853591 102.5 13.385624C102.03079 12.853591 101.51086 12.376882 100.9402 11.955497C100.36954 11.534112 99.760933 11.177487 99.11438 10.885623C98.467827 10.593758 97.797798 10.373187 97.104309 10.223912C96.41082 10.074637 95.709381 10 95 10C94.290627 10 93.589188 10.074637 92.895699 10.223912C92.202202 10.373187 91.532173 10.593758 90.88562 10.885623C90.239067 11.177487 89.630463 11.534112 89.059799 11.955497C88.489143 12.376882 87.969208 12.853591 87.5 13.385624C87.030792 12.853591 86.510857 12.376882 85.940201 11.955497C85.369545 11.534112 84.760933 11.177487 84.11438 10.885623C83.467827 10.593758 82.797798 10.373187 82.104309 10.223912C81.41082 10.074637 80.709381 10 80 10C79.290627 10 78.589195 10.074637 77.895699 10.223912C77.202209 10.373187 76.532181 10.593758 75.885628 10.885623C75.239075 11.177487 74.63047 11.534112 74.059807 11.955497C73.489143 12.376882 72.969208 12.853591 72.5 13.385624C72.030792 12.853591 71.510857 12.376882 70.940193 11.955497C70.369537 11.534112 69.760933 11.177487 69.11438 10.885623C68.467827 10.593758 67.797798 10.373187 67.104309 10.223912C66.41082 10.074637 65.709381 10 65 10C64.290627 10 63.589188 10.074637 62.895695 10.223912C62.202202 10.373187 61.532177 10.593758 60.885624 10.885623C60.239071 11.177487 59.630463 11.534112 59.059803 11.955497C58.489143 12.376882 57.969212 12.853591 57.5 13.385624C57.030792 12.853591 56.510857 12.376882 55.940197 11.955497C55.369541 11.534112 54.760937 11.177487 54.11438 10.885623C53.467827 10.593758 52.797802 10.373187 52.104309 10.223912C51.410816 10.074637 50.709377 10 50 10ZM120 20L20 20L20 100L120 100L120 20Z" fill-rule="evenodd"/>
</svg>
