render-wasm/src/render/svg/snapshots/render_wasm__render__svg__tests__exports_rect_with_mixed_center_stroke.snap
---
source: src/render/svg/tests.rs
expression: svg
---
<?xml version="1.0" encoding="utf-8" ?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="108" height="88" viewBox="0 0 108 88">
	<path fill="blue" transform="translate(-6 -6)" d="M23 6L10 6L10 14L23 14L23 6ZM45 6L36 6L36 14L45 14L45 6ZM71 6L58 6L58 14L71 14L71 6ZM93 6L84 6L84 14L93 14L93 6ZM114 6L106 6L106 19L114 19L114 6ZM6 21L6 34L14 34L14 21L6 21ZM114 41L114 32L106 32L106 41L114 41ZM6 47L6 56L14 56L14 47L6 47ZM114 67L114 54L106 54L106 67L114 67ZM6 69L6 82L14 82L14 69L6 69ZM114 89L114 80L106 80L106 89L114 89ZM15 94L24 94L24 86L15 86L15 94ZM37 94L49.999996 94L49.999996 86L37 86L37 94ZM63 94L72 94L72 86L63 86L63 94ZM85 94L98 94L98 86L85 86L85 94Z" fill-rule="evenodd"/>
</svg>
