render-wasm/src/render/svg/snapshots/render_wasm__render__svg__tests__exports_rect_with_per_side_dashed_center_stroke.snap
---
source: src/render/svg/tests.rs
expression: svg
---
<?xml version="1.0" encoding="utf-8" ?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="280" height="220" viewBox="0 0 280 220">
	<path fill="#1040FF" transform="translate(20 20)" d="M-20 -2L-6 -2L-6 2L-20 2M8 -2L22 -2L22 2L8 2M36 -2L50 -2L50 2L36 2M64 -2L78 -2L78 2L64 2M92 -2L106 -2L106 2L92 2M120 -2L134 -2L134 2L120 2M148 -2L162 -2L162 2L148 2M176 -2L190 -2L190 2L176 2M204 -2L218 -2L218 2L204 2M232 -2L246 -2L246 2L232 2M246 -2L246 19.555553L234 19.555553L234 -2M246 41.111107L246 62.666656L234 62.666656L234 41.111107M246 84.222214L246 105.77777L234 105.77777L234 84.222214M246 127.33331L246 148.88887L234 148.88887L234 127.33331M246 170.44443L246 191.99998L234 191.99998L234 170.44443M246 192L208 192L208 168L246 168M170 192L132 192L132 168L170 168M94 192L56 192L56 168L94 168M18 192L-20 192L-20 168L18 168M-19.999998 192L-19.999998 127.33334L19.999998 127.33334L19.999998 192M-19.999998 62.666687L-19.999998 -1.9999847L19.999998 -1.9999847L19.999998 62.666687"/>
</svg>
