render-wasm/src/render/svg/snapshots/render_wasm__render__svg__tests__exports_rect_with_per_side_dashed_inner_stroke.snap
---
source: src/render/svg/tests.rs
expression: svg
---
<?xml version="1.0" encoding="utf-8" ?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="140" height="100" viewBox="0 0 140 100">
	<path fill="#1040FF" d="M8 0L0 0L0 8L40 8L40 0L8 0ZM50 0L42 0L42 4L50 4L50 0ZM64 0L56 0L56 4L64 4L64 0ZM78 0L70 0L70 4L78 4L78 0ZM92 0L84 0L84 4L92 4L92 0ZM106 0L98 0L98 4L106 4L106 0ZM120 0L112 0L112 4L120 4L120 0ZM140 0L126 0L126 4L128 4L128 8L140 8L140 0ZM40 22L40 14L0 14L0 22L40 22ZM140 22L140 14L128 14L128 22L140 22ZM40 36L40 28L0 28L0 36L40 36ZM140 36L140 28L128 28L128 36L140 36ZM40 50L40 42L0 42L0 50L40 50ZM140 50L140 42L128 42L128 50L140 50ZM40 64L40 56L0 56L0 64L40 64ZM140 64L140 56L128 56L128 64L140 64ZM40 78L40 70L0 70L0 100L40 100L40 98L36 98L36 92L40 92L40 84L36 84L36 78L40 78ZM28 78L22 78L22 84L28 84L28 78ZM28 92L22 92L22 98L28 98L28 92ZM14 98L14 92L8 92L8 98L14 98ZM8 84L14 84L14 78L8 78L8 84ZM140 78L140 70L128 70L128 76L126 76L126 100L140 100L140 98L134 98L134 92L140 92L140 84L134 84L134 78L140 78ZM42 76L50 76L50 100L42 100L42 76ZM56 76L64 76L64 100L56 100L56 76ZM70 76L78 76L78 100L70 100L70 76ZM84 76L92 76L92 100L84 100L84 76ZM98 76L106 76L106 100L98 100L98 76ZM112 76L120 76L120 100L112 100L112 76Z" fill-rule="evenodd"/>
</svg>
